<resources>
    <string name="app_name">Sign Language Translation</string>
    <string name="server_app_address">http://192.168.0.102:8000/app</string>
    <string name="开始交流">Start Communication</string>
    <string name="设置">Setting</string>
    <string name="关于">About</string>
    <string name="选择手环">Choose the Armband</string>
    <string name="返回">Back</string>
    <string name="开始手语采集">Start Sign Recognition</string>
    <string name="结束手语采集">Stop Sign Recognition</string>
    <string name="松开手指可取消录音">Lift up to stop recording</string>
    <string name="向上滑动可取消录音">Slide up to cancel recording</string>
    <string name="语音时间太短">The recording time is too short</string>
    <string name="欢迎语">Welcome to use Sign Language Recognizing System</string>
    <string name="手语识别">Start Recognizing</string>
    <string name="识别模式">识别模式</string>
    <string name="结束识别">Stop Recognizing</string>
    <string name="语音输入">Speech Input</string>
    <string name="刷新">Refresh</string>
    <string name="点击手环进行连接">Please Click the Armbands below to Start Communicating</string>
    <string name="输入手语">Start Sign Recognition</string>
    <string name="输入语音">Speech Recognizing</string>
    <string name="发送">Send</string>
    <string name="双手模式">双手模式</string>
    <string name="语音消息">Voice Message</string>
    <string name="文字消息">Text Message</string>
    <string name="自动补全">Auto Complete</string>
    <string name="text_edit_hint">Please type the text you want say here</string>
    <string name="hint_sign_confirm">Is this Recognize result Correct?</string>
    <string name="hint_sign_recapture">Need to re-Recognize?</string>
    <string name="是">Yes</string>
    <string name="否">No</string>
    <string name="双手">双手</string>
    <string name="单手">单手</string>
    <string name="确定">Confirm</string>
</resources>
