<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="start"
        android:layout_marginStart="5dp">

        <LinearLayout
            android:id="@+id/button_armband_select_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="23dp"
                android:background="@drawable/return_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:text="@string/返回"
                android:textColor="#D0FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#00FFFFFF">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/选择手环"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="-15dp"
                    android:fontFamily="@font/noto_sans"
                    android:textSize="33sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:typeface="sans"
                    android:textSize="18sp"
                    android:layout_marginBottom="-5dp"
                    android:textStyle="normal"
                    android:text="@string/点击手环进行连接"
                    android:layout_marginTop="-10dp"
                    android:fontFamily="@font/noto_sans" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/horizontal_line"/>
            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="330dp"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:background="@drawable/armband_logo_background"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/armbands_list_rv"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

            </android.support.v7.widget.RecyclerView>


            <LinearLayout
                android:id="@+id/button_armband_select_refresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="300dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:background="@drawable/refresh_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/刷新"
                        android:textColor="#D0FFFFFF"
                        android:textSize="25sp" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/button_armband_select_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/确定"
                android:fontFamily="@font/noto_sans"
                android:visibility="gone" />



        </FrameLayout>


    </LinearLayout>





</LinearLayout>