<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="55dp"
    android:paddingStart="55dp"
    android:paddingEnd="55dp"
    android:paddingBottom="0dp"
    android:gravity="center"
    android:background="@mipmap/split_board_left"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_start_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:background="@drawable/start_conversation_icon"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/开始交流"
                    android:textColor="#E0FFFFFF"
                    android:textSize="25sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="start"
                   android:layout_marginBottom="7dp">

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:id="@+id/setting_button"
                       android:orientation="horizontal">

                       <ImageView
                           android:layout_width="28dp"
                           android:layout_height="28dp"
                           android:background="@drawable/setting_icon" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:fontFamily="@font/noto_sans"
                           android:text="@string/设置"
                           android:textColor="#E0FFFFFF"
                           android:textSize="27sp" />
                   </LinearLayout>

               </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="4dp"
                    android:background="@drawable/horizontal_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="7dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:background="@drawable/about_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans"
                            android:text="@string/关于"
                            android:textColor="#E0FFFFFF"
                            android:textSize="27sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>


