<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:id="@+id/button_input_panel_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="23dp"
            android:background="@drawable/return_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/返回"
            android:textColor="#D0FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding='10dp'>
            <ImageView
                android:id="@+id/button_input_panel_sign_start"
                android:layout_width="81dp"
                android:layout_height="108dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/手语识别"
                android:scaleType="centerInside"
                android:src="@drawable/icon_sign_recog_off" />

            <TextView
                android:id="@+id/sign_input_state_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/手语识别"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/noto_sans"
                android:textSize="25sp" />
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/horizontal_line"
            android:layout_margin="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding='15dp'>
            <com.github.scarecrow.signscognizing.adapters.VoiceRecordButton
                android:id="@+id/button_input_panel_voice_start"
                android:layout_width="81dp"
                android:layout_height="81dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_voice_input" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/输入语音"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/noto_sans"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

        </LinearLayout>

    </LinearLayout>



</LinearLayout>